; ModuleID = '/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_ps_codec.c_ps_fetch_string.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_ps_codec.c_ps_fetch_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"ps_fetch_string\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"len = %lu\00", align 1
@.str.2 = private unnamed_addr constant [28 x i8] c"copying from the row buffer\00", align 1
@DBG_VOID_RETURN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32**)* @ps_fetch_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ps_fetch_string(i32* %0, i32* %1, i32 %2, i32** %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32**, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32** %3, i32*** %8, align 8
  %10 = load i32**, i32*** %8, align 8
  %11 = call i32 @php_mysqlnd_net_field_length(i32** %10)
  store i32 %11, i32* %9, align 4
  %12 = call i32 @DBG_ENTER(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %13 = load i32, i32* %9, align 4
  %14 = call i32 @DBG_INF_FMT(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %13)
  %15 = call i32 @DBG_INF(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0))
  %16 = load i32*, i32** %5, align 8
  %17 = load i32**, i32*** %8, align 8
  %18 = load i32*, i32** %17, align 8
  %19 = bitcast i32* %18 to i8*
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @ZVAL_STRINGL(i32* %16, i8* %19, i32 %20)
  %22 = load i32, i32* %9, align 4
  %23 = load i32**, i32*** %8, align 8
  %24 = load i32*, i32** %23, align 8
  %25 = sext i32 %22 to i64
  %26 = getelementptr inbounds i32, i32* %24, i64 %25
  store i32* %26, i32** %23, align 8
  %27 = load i32, i32* @DBG_VOID_RETURN, align 4
  ret void
}

declare dso_local i32 @php_mysqlnd_net_field_length(i32**) #1

declare dso_local i32 @DBG_ENTER(i8*) #1

declare dso_local i32 @DBG_INF_FMT(i8*, i32) #1

declare dso_local i32 @DBG_INF(i8*) #1

declare dso_local i32 @ZVAL_STRINGL(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
